fixed spacing issues on footer and added info to about page

--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -1,15 +1,14 @@
 @import 'lib/colors';
 
 footer {
-  @include size(100%, 20rem);
   padding-top: 25px;
-  margin-bottom: 27px;
+  padding-bottom: 21px;
   background-color: $bodyTextColor;
   width: 100%;
   color: $backgroundColor;
   i.fa {
-    font-size: 6rem;
-    display: block;
+    font-size: 4rem;
+    margin: 1.3rem;
     text-align: center;
     margin-bottom: 15px;
   }
@@ -17,7 +16,7 @@ footer {
     color: $accentColor;
   }
   .contact-info {
-    padding-left: 60px;
+    padding-left: 35px;
   }
   .social-icons {
     a {
